# qxfly_ImageCompression

./: .gitignore  CMakeLists.txt  README.md  main.cpp
resources/: rec.qrc
resources/style/: ui.qss
src/models/: CompressionImage.cpp  CompressionImage.h  TableItemData.cpp  TableItemData.h
src/utils/: Utils.h
src/widgets/: CITableWidgetItem.cpp  CITableWidgetItem.h  ImageGraphicsView.cpp  ImageGraphicsView.h  mainWidget.cpp  mainWidget.h
